# velma_scripts

./: CMakeLists.txt  LICENSE  package.xml
data/common/: velma_room.env.xml
data/gazebo/models/cabinet_door/: model.sdf
data/gazebo/worlds/: blank.world  world_cabinet_door.world
data/jar/: cabinet.kinbody.xml  cabinet_jar.env.xml  cabinet_test.env.xml  jar.kinbody.xml  jar_collision.kinbody.xml
data/key/: vis_test.env.xml
data/meshes/: klucz_gerda_05.blend  klucz_gerda_ascii.stl  klucz_gerda_binary.stl
data/romoco/: big_box.stl  big_box_ascii.stl  object_marker.txt  romoco.env.xml  romoco_robot.env.xml
launch/: ar_track_kinect_30.launch  ar_track_pgcam_30.launch  depth.launch  depth_fake.launch  octomap_server.launch  pointgrey_camera.launch  state_server.launch  velma.launch  velma_cabinet_door.launch  velma_fake.launch
scripts/: conversions.py  door_key.py  door_key_mod.py  headkinematics.py  kinect_fake.py  objectstate.py  open_door.py  openraveinstance.py  pointcloud_filter.py  pose_lookup_table_left.py  pose_lookup_table_right.py  prolatehyperspheroid.py  q5q6_self_collision_test.py  recognized_objects_publisher.py  robrex_jar_cabinet.py  romoco.py  rrt_planner.py  rrt_star_connect_planner.py  rrt_star_planner.py  rrt_star_planner_ee.py  rrt_tests.py  set_initial_position.py  state_server.py  surfaceutils.py  symbolic_planner.py  symbolic_planner2.py  symbolic_planner3.py  symbolic_planner4.py  tactile_interface.py  tasks.py  test_hierarchy_control.py  test_hierarchy_control2.py  test_jar_grasping.py  test_ompl.py  test_or_octomap.py  test_or_urdf.py  test_vis_planning.py  test_vis_planning3.py  tree.py  velma.py  (+8 more)
