<package>
  <name>velma_scripts</name>
  <version>1.0.0</version>
  <description>
    This package contains python scripts of routines for WUT Velma robot.
  </description>
  <author email="dawid.seredynski@gmail.com">Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>std_srvs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 
  <run_depend>rtt_barrett_hand_controller</run_depend>
  <run_depend>rtt_barrett_hand_controller_srvs</run_depend>

</package>
